tests/snapshots/process_tests__snapshot_hidden_process_display.snap
---
source: tests/process_tests.rs
expression: output
---
web ● │ worker ●                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                        
[12:00:00] web: Starting web server on port 3000                                                                        
[12:00:00] web: GET /api/users 200 OK                                                                                   
[12:00:00] web: ERROR: Database connection failed                                                                       
[12:00:00] web: POST /api/auth 201 Created                                                                              
[12:00:00] web: Server ready to accept connections                                                                      
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Buffer: 0.0/50 MB (0%) | 8 lines   | 1 batches [TAIL]                                                                   
Press : for commands, / to search, q to quit
