tests/snapshots/process_tests__snapshot_hidden_with_filters_combined.snap
---
source: tests/process_tests.rs
expression: output
---
web    ● │ worker ●                                                                                                     
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
(1 filters)                                                                                                             
[12:00:00] web: ERROR: Database connection failed                                                                       
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Buffer: 0.0/50 MB (0%) | 8 lines   | 1 batches [TAIL]                                                                   
Press : for commands, / to search, q to quit
